--- a/css/style.css
+++ b/css/style.css
@@ -310,3 +310,63 @@ h6{
     width: 100%;
   }
 }
+button:focus,button:active {
+  outline: none !important;
+  box-shadow: none;
+}
+.hero1 {
+  position:relative;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 25px;
+  padding: 10px 34px;
+  width:100% !important;
+  color: #74d18d;
+  font-size: 0.8em;
+  box-shadow: 0 .125rem .85rem rgba(0,0,0,.075)!important;
+  font-weight: 500;
+}
+.hero1:hover {
+  position:relative;
+  background-color:#74d18d;
+  border: 1px solid #74d18d;
+  border-radius: 25px;
+  padding: 10px 34px;
+  width:100% !important;
+  color: white;
+  font-size: 0.8em;
+  font-weight: 500;
+}
+.hero {
+  position:relative;
+  background-color:#74d18d;
+  border: 1px solid #74d18d;
+  border-radius: 25px;
+  padding: 10px 34px;
+  width:100% !important;
+  color: white;
+  font-size: 0.8em;
+  font-weight: 500;
+}
+
+.hero:after {
+  content:'';
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 0;
+  z-index: 1;
+  height: 0;
+  border-top: solid 15px #74d18d;
+  border-left: solid 15px transparent;
+  border-right: solid 15px transparent;
+}
+.sidebar-left-nav {
+  -webkit-transform: translate3d(-100%, 0px, 0px);
+  transform: translate3d(-100%, 0px, 0px);
+  visibility: visible;
+  transition: all 0.5s ease 0s;
+  -webkit-transition: all 0.5s ease 0s;
+}
