--- a/css/style.css
+++ b/css/style.css
@@ -457,3 +457,152 @@ button.switch-month {
 button.switch-month:hover {
   color: #74d18d;
 }
+/* ============================custom button=========== */
+.btn-arrow-right,
+.btn-arrow-left {
+   position: relative;
+   padding: 4px 15px;
+   font-size: 0.8em;
+   background-color: #212529;
+   color: white;
+}
+.active-ar{
+  background-color: #74d18d !important;
+}
+
+.btn-arrow-right {
+   padding-left: 30px;
+}
+
+.btn-arrow-left {
+   padding-right: 36px;
+}
+
+.btn-arrow-right:before,
+.btn-arrow-right:after,
+.btn-arrow-left:before,
+.btn-arrow-left:after {
+   /* make two squares (before and after), looking similar to the button */
+   
+   content: "";
+   position: absolute;
+   top: 5px;
+   /* move it down because of rounded corners */
+   
+   width: 18px;
+   /* same as height */
+   
+   height: 18px;
+   /* button_outer_height / sqrt(2) */
+   
+   background: inherit;
+   /* use parent background */
+   
+   border: inherit;
+   /* use parent border */
+   
+   border-left-color: transparent;
+   /* hide left border */
+   
+   border-bottom-color: transparent;
+   /* hide bottom border */
+   
+   border-radius: 0px 4px 0px 0px;
+   /* round arrow corner, the shorthand property doesn't accept "inherit" so it is set to 4px */
+   
+   -webkit-border-radius: 0px 4px 0px 0px;
+   -moz-border-radius: 0px 4px 0px 0px;
+}
+
+.btn-arrow-right:before,
+.btn-arrow-right:after {
+   transform: rotate(45deg);
+   /* rotate right arrow squares 45 deg to point right */
+   
+   -webkit-transform: rotate(45deg);
+   -moz-transform: rotate(45deg);
+   -o-transform: rotate(45deg);
+   -ms-transform: rotate(45deg);
+}
+
+.btn-arrow-left:before,
+.btn-arrow-left:after {
+   transform: rotate(225deg);
+   /* rotate left arrow squares 225 deg to point left */
+   
+   -webkit-transform: rotate(225deg);
+   -moz-transform: rotate(225deg);
+   -o-transform: rotate(225deg);
+   -ms-transform: rotate(225deg);
+}
+
+.btn-arrow-right:before,
+.btn-arrow-left:before {
+   /* align the "before" square to the left */
+   
+   left: -10px;
+}
+
+.btn-arrow-right:after,
+.btn-arrow-left:after {
+   /* align the "after" square to the right */
+   
+   right: -10px;
+}
+
+.btn-arrow-right:after,
+.btn-arrow-left:before {
+   /* bring arrow pointers to front */
+   
+   z-index: 1;
+}
+
+.btn-arrow-right:before,
+.btn-arrow-left:after {
+   /* hide arrow tails background */
+   
+   background-color: white;
+}
+/* ===========================custtom bstep button end ================== */
+/* ======================================custom check box=================================== */
+
+.checkbox {
+  display: inline-block;
+  cursor: pointer;
+  font-size: 13px; line-height:18px;
+ }
+ 
+ input[type=checkbox] {
+  display:none;   
+ }
+ 
+ .checkbox:before {
+  content: "";
+  display: inline-block;
+  width: 30px;
+  height: 18px;
+  vertical-align: middle;
+  background-color: white;
+  color: #f3f3f3;
+  background: url('../images/Rounded\ Rectangle\ 42\ copy\ 49.png');
+  text-align: center;
+  background-repeat: no-repeat;
+  background-size: contain; 
+ }
+ 
+ input[type=checkbox]:checked + .checkbox:before {
+  background: url('../images/checked.png');
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, .2);
+  font-size: 15px;
+  background-size: contain;
+  background-repeat: no-repeat;
+ 
+ }
+ .btn-next{
+  background-color: #74d18d;
+  color: white !important;
+  padding: 6px 24px;
+  font-size: 0.9em;
+  border-radius: 25px;
+  width: 100%;
+}
