request trip comm

--- a/css/style.css
+++ b/css/style.css
@@ -606,3 +606,29 @@ button.switch-month:hover {
   border-radius: 25px;
   width: 100%;
 }
+.btn-loc{
+  background-color: #74d18d;
+  color: white !important;
+  padding: 6px 14px;
+  font-size: 0.9em;
+  border-radius: 25px;
+  width: 100%;
+}
+.btn-tick{
+  background-color: #74d18d;
+  color: white !important;
+  padding: 6px 14px;
+  font-size: 0.9em;
+  border-radius: 25px;
+  width: 70%;
+}
+@media(max-width:780px){
+  .btn-tick{
+    background-color: #74d18d;
+    color: white !important;
+    padding: 6px 14px;
+    font-size: 0.9em;
+    border-radius: 25px;
+    width: 30%;
+  }
+}
