--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@ h6{
     background-image: url(../images/background.png);
     background-repeat: no-repeat;  
     width: 100%;
-    height: 150vh;
     background-size:100% 100% !important;
   }
   .link-style{
@@ -47,7 +46,7 @@ h6{
     color: #74d18d !important;
     font-weight: 600;
     font-size: 0.8em;
-    width: 100%;
+    width: 80%;
   }
   .btn-search{
     background-color: #74d18d;
@@ -70,7 +69,7 @@ h6{
     background-size:100% 100% !important;
   }
   .margin-become{
-  padding-top: 16rem;
+  padding-top: 10rem;
    margin-bottom: 9rem;
   }
   .footer-section{
@@ -90,7 +89,7 @@ h6{
         background-image: url(../images/background.png);
         background-repeat: no-repeat;  
         width: 100%;
-        height: 130vh;
+        height: 100vh;
         background-size:auto 100% !important;
       }
       .margin-become{
@@ -298,8 +297,8 @@ h6{
   font-size: 0.9em;
 }
 .margin-tur{
-  margin-top: 10rem ;
-  margin-bottom: 10rem;
+  margin-top: 7rem ;
+  padding-bottom: 15rem;
 }
 .font-tuur{
   font-size: 5rem;
@@ -629,6 +628,15 @@ button.switch-month:hover {
   font-size: 0.9em;
   border-radius: 25px;
 }
+#nav2{
+  display: none;
+}
+.h-full{
+  height: 100vh;
+}
+.m-dash{
+  margin-top: 6rem;
+}
 @media(max-width:780px){
   .btn-tick{
     background-color: #74d18d;
@@ -638,4 +646,19 @@ button.switch-month:hover {
     border-radius: 25px;
     width: 30%;
   }
+  .rotate{
+    transform: rotate(90deg);
+    margin-top: 3rem;
+    margin-bottom: 2.5rem;
+  }
+  #nav1{
+    display: none;
+  }
+  #nav2{
+    display: block;
+  }
+  .h-full{
+    height: auto;
+  }
 }
+
